# libchunkstream-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: chunkstreamConfig.cmake.in
include/chunkstream/: receiver.h  sender.h  thread_pool.h
include/chunkstream/core/: chunk_header.h  ordered_hash_container.h  thread_pool.h
include/chunkstream/receiver/: memory_pool.h  receiving_frame.h
src/: client_example.cpp  main.cpp  receiver.cpp  sender.cpp  server_example.cpp  thread_pool.cpp
src/core/: chunk_header.cpp
src/receiver/: memory_pool.cpp  receiving_frame.cpp
